# Mark-XLVIII

./: .copilot-instructions.md  .gitignore  ARCHITECTURE.md  BUILD_COMPLETE.md  CHAT_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  SESSION_COMPLETE.md  main.py  nee_how__ahh_niu.onnx  nee_how__ahh_niu.tflite  pyproject.toml  readme.md  requirements.txt  run_dashboard.bat  setup.py  ui.py  wakeword.py
.claude/skills/run-mark-xxxix/: SKILL.md  driver.py
actions/: browser_control.py  camera_control.py  code_helper.py  computer_settings.py  music_player.py  open_app.py  reminder.py  screen_processor.py
agent/: __init__.py  executor.py
config/: agents.json  app_config.json  config.json  tools.json
core/: __init__.py  audit.py  confirmation.py  handoff.py  manifest.py  ollama_backend.py  prompt.txt  registry.py  role_agent.py  roles.py  scheduler.py  telegram.py  tradingview.py
dashboard/: CHAT_README.md  app.py  chat_api.py  data.py  server.py
dashboard/static/: chat.html
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCUMENTATION_SUMMARY.md  ORCHESTRATION.md  README.md  TECHNICAL_GUIDE.md  architecture_analysis.md
logs/: .gitignore
memory/: config_manager.py
tests/core/: test_audit.py  test_ollama_backend.py  test_orchestration.py  test_roles.py  test_scheduler.py  test_telegram.py  test_tradingview.py
tests/dashboard/: test_data.py
